--- a/local-apps/acadiana/best2016/second-street.css
+++ b/local-apps/acadiana/best2016/second-street.css
@@ -4,9 +4,9 @@ body {
 background-image:url("http://stylesheets.azcentral.com/local-apps/acadiana/best2016/timesofacadiana-best-bg.png");       
 background-repeat:x;
 }
-a {
+/*a {
 color:#e45e39!important;
-}
+}*/
 
 .ad300x {
     background: #efefef;
